--- a/fotos.css
+++ b/fotos.css
@@ -1,19 +1,21 @@
 * {
     /* estilo por defecto para todos los elementos de la pagina*/
-    box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    box-sizing:border-box;
+}
+
+h1{
+    text-align:center;
+    margin: 0 auto;
+}
+
+body{
+    font-size: medium;
 }
 
 /*estilos de menu*/
-
-#menu summary {
-    font-size: 30px;
-}
-
 a {
-    display: block;
-    padding: 3px;
-    width: 30%;
+    padding: 10px;
     background-color: rgb(184, 183, 183);
     border-bottom: 1px solid #eeeeee;
     text-align:center;
@@ -31,18 +33,21 @@ a {
 
   /*estilo galeria*/
 div.centrado{
-    text-align:center;
+    text-align:center;  
 }
 
 img{   
     width: 30%;
-    padding: 5px;
-    margin: 5px;
+    padding: 1%;
     padding-top: 5%;
     object-fit: contain;
     display: inline-block;
+    transition: transform .2s;
 }
 
+img:hover{
+    transform: scale(1.1);
+}
 /*estilo animado de texto*/
 
 #recuadro1{
@@ -65,6 +70,26 @@ img{
   #recuadro1:hover{
     width:300px;
     background-color: rgb(0, 255, 98);
+  }
+
+  /*parrafito del home*/
+  #parrafo{
+      width: 30%;
+      text-align:center;
+      margin: 0 auto;
+      border-radius: 30px;  
+      background-color:#eee;
+      padding:10px;
+      transition:width 2s ease;
+      -moz-transition:width 2s ease;
+      -ms-transition:width 2s ease;
+      -webkit-transition:width 2s ease;
+      -o-transition:width 2s ease;
+
+  }
+
+  #parrafo:hover{
+      width: 45%;
   }
 
 /*esto es un condicional que dice que en pantallas de maximo 900px haga eso*/
